plugins {
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'application'
}

group = 'kz.bikecology'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    javafxVersion = '24'
}

dependencies {
    implementation "org.openjfx:javafx-web:$javafxVersion"
}

// Set JavaFX modules required
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

application {
    mainClass = "kz.bikecology.MainApp" // your main class
}

javafx {
    modules = ['javafx.controls', 'javafx.fxml']
    version = '24'
}

run {
    // Add VM args for JavaFX modules
    jvmArgs = [
            '--module-path', classpath.asPath,
            '--add-modules', 'javafx.controls,javafx.fxml,javafx.web'
    ]
}
